View Issue Details

IDProjectCategoryView StatusLast Update
0024398Open CASCADEOCCT:Modeling Algorithmspublic2013-12-19 13:59
ReportermkvAssigned Tobugmaster  
PriorityhighSeveritymajor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.7.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024398: Output of extrema draw-command has various format on optimise and debug modes
DescriptionOutput of extrema draw-command has various format on optimise and debug modes
Steps To ReproduceSee test case:
bugs modalg_5(010) bug24327

optimise mode
....
extrema c1t c2t
ext_1 ext_2 ext_3 ext_4
length ext_1
The length ext_1 is 538.18810446578118


debug mode:
...
extrema c1t c2t
ext_1 (U=41.100504; V=4906.796737) ext_2 (U=607.258469; V=2555.107757) ext_3 (U=678.342696; V=2478.120550) ext_4 (U=728.823663; V=2424.599522)
length ext_1
ext_1is not a curve
TagsNo tags attached.
Test case numberbugs modalg_5(010) bug24327

Activities

aml

2013-11-22 16:28

developer   ~0026853

Dear ifv,
Please test current state of branch CR24398, to be sure it is ok.

Change list:
I saved output system i.e. extremums with parametric values in debug and only extremums in release. In debug mode each ext starts from new line (it much more easier to read them).

Bug fix:
There was bug in debug mode, curve doesn't create after "extrema" DRAW function . Fixed.

ifv

2013-11-22 16:39

developer   ~0026858

Ok

apn

2013-11-25 17:48

administrator   ~0026895

Last edited: 2013-11-25 17:49

Dear BugMaster,

Branch CR24398 (and products from GIT master) was compiled on Linux and Windows platforms and tested (in debug mode too).
SHA-1: a5c6cc95e11a5b701c40826e0037f293746e53fe

Number of compiler warnings:

occt component :
Linux: 320 (320 on master)
Windows: 0 (0 on master)

products component :
Linux: 188 (188 on master)
Windows: 286 (286 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
bugs modalg_5(010) bug24327 - BAD
http://jenkins-test-02.nnov.opencascade.com:8080/job/mnt-CR24398-master_occt_tests_linux_start_deb/label=Debian60-64,tests_group=bugs,tests_subgroup=010/4/HTML_Report/?
http://jenkins-test-02.nnov.opencascade.com:8080/job/mnt-CR24398-master_occt_tests_windows_start_deb/5/label=windows_test,tests_group=bugs,tests_subgroup=010/HTML_Report/?

aml

2013-11-26 11:00

developer   ~0026905

Last edited: 2013-11-26 11:04

Dear apn,
There are only 4 extremums in output. What reason to invoke "length ext_5", or may be it is bug?

apn

2013-11-26 11:48

administrator   ~0026909

Reason of appearance "length ext_5, length ext_6, length ext_7, length ext_8" is difference between outputs of command extrema in debug and optimize modes.
In Debug:
Draw[1]> set info [extrema c1t c2t]
ext_1(U=41.100503962799095; V=4906.7967369225962)
ext_2(U=607.25846897241047; V=2555.1077569270901)
ext_3(U=678.34269564178123; V=2478.1205500811766)
ext_4(U=728.82366267218174; V=2424.5995222061929)
Draw[2]> llength $info
8

In Optimize:
Draw[1]> set info [extrema c1t c2t]
ext_1 ext_2 ext_3 ext_4
Draw[2]> llength $info
4

It's necessary to modified extrema's output in Optimize mode. I'll modify all neseccary test cases, which use this command.

aml

2013-11-26 12:06

developer   ~0026910

Dear apn,
please perform test again.

apn

2013-11-27 14:07

administrator   ~0026961

Dear BugMaster,

Branch CR24398 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 387a512b92117f40068bc16924e2db31ab48b552

Number of compiler warnings:

occt component (release) :
Linux: 320 (320 on master)
Windows: 0 (0 on master)

occt component (debug) :
Linux: 306 (306 on master)
Windows: 0 (0 on master)

products component :
Linux: 188 (188 on master)
Windows: 286 (286 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
bugs modalg_5(010) bug24327 - OK (debug)
http://occt-tests/CR24398-master-occt-deb/Debian60-64/bugs/modalg_5/bug24327.html
http://occt-tests/CR24398-master-occt-deb/Windows-32-VC9/bugs/modalg_5/bug24327.html

Improvements(debug):
bugs modalg_2 bug23031
bugs modalg_5 bug23706_11 bug23706_12
bugs moddata_1 bug22733
bugs moddata_2 bug703


Testing on Linux:
Total MEMORY difference: 357722556 / 358532660
Total CPU difference: 44399.0100000002 / 43977.070000000385

Testing on Windows:
Total MEMORY difference: 413067340 / 412741860
Total CPU difference: 31263.875 / 32189.65625

There are not differences in images found by testdiff.

Related Changesets

occt: master 32b6a53f

2013-11-28 07:25:41

aml


Committer: bugmaster Details Diff
0024398: Output of extrema draw-command has various format on optimise and debug modes

Fixed creation of extrema curve in debug mode.
Deleted space between ";" and "V" in debug output to make "llength" DRAW funcion work correctly in debug mode.
Deleted TODOs in tests/bugs/modalg_5/bug24327
Deleted TODOs in test cases with improvement in extrema output. Increased cpulimit in de, boolean and perf.
Affected Issues
0024398
mod - src/GeometryTest/GeometryTest_APICommands.cxx Diff File
mod - tests/boolean/bsection/N4 Diff File
mod - tests/bugs/modalg_2/bug23031 Diff File
mod - tests/bugs/modalg_5/bug23706_11 Diff File
mod - tests/bugs/modalg_5/bug23706_12 Diff File
mod - tests/bugs/modalg_5/bug24327 Diff File
mod - tests/bugs/moddata_1/bug22733 Diff File
mod - tests/bugs/moddata_2/bug703 Diff File
mod - tests/de/step_3/B5 Diff File
mod - tests/perf/bop/buildfaces Diff File

Issue History

Date Modified Username Field Change
2013-11-22 15:18 mkv New Issue
2013-11-22 15:18 mkv Assigned To => emv
2013-11-22 15:19 mkv Test case number => bugs modalg_5(010) bug24327
2013-11-22 15:19 mkv Status new => assigned
2013-11-22 15:20 mkv Priority normal => high
2013-11-22 15:29 mkv Assigned To emv => aml
2013-11-22 16:28 aml Note Added: 0026853
2013-11-22 16:28 aml Assigned To aml => ifv
2013-11-22 16:28 aml Status assigned => resolved
2013-11-22 16:39 ifv Note Added: 0026858
2013-11-22 16:39 ifv Status resolved => reviewed
2013-11-25 08:07 mkv Assigned To ifv => mkv
2013-11-25 17:48 apn Note Added: 0026895
2013-11-25 17:49 apn Note Edited: 0026895
2013-11-25 17:50 apn Assigned To mkv => aml
2013-11-25 17:50 apn Status reviewed => assigned
2013-11-25 17:50 apn Product Version => 6.7.0
2013-11-25 17:50 apn Target Version => 6.7.0
2013-11-26 11:00 aml Note Added: 0026905
2013-11-26 11:00 aml Status assigned => feedback
2013-11-26 11:00 aml Assigned To aml => apn
2013-11-26 11:00 aml Status feedback => acknowledged
2013-11-26 11:00 aml Status acknowledged => feedback
2013-11-26 11:04 aml Note Edited: 0026905
2013-11-26 11:48 apn Note Added: 0026909
2013-11-26 11:49 apn Assigned To apn => aml
2013-11-26 12:06 aml Note Added: 0026910
2013-11-26 12:06 aml Assigned To aml => apn
2013-11-26 12:06 aml Status feedback => assigned
2013-11-27 14:07 apn Note Added: 0026961
2013-11-27 14:08 apn Assigned To apn => bugmaster
2013-11-27 14:08 apn Status assigned => feedback
2013-11-27 14:08 apn Status feedback => tested
2013-12-02 10:21 bugmaster Changeset attached => occt master 32b6a53f
2013-12-02 10:21 bugmaster Status tested => verified
2013-12-02 10:21 bugmaster Resolution open => fixed
2013-12-19 13:50 bugmaster Status verified => closed
2013-12-19 13:59 bugmaster Fixed in Version => 6.7.0